# DirectX12-Meshlets-Testing

./: CMakeLists.txt
src/: BuildShaders.bat  MeshletMS.hlsl  MeshletPS.hlsl  main.cpp
